k8s/helm/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsa
  namespace: app
  labels:
    app: fsa
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
    #TODO - pridat cesty pre BE
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fsa-fe
            port:
              number: 80
      - path: /api/v1/currencies
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: fsa-keycloak-http
            port:
              number: 80
